[package]
name = "ecoconvert"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Timothée Demares <timothee.demares@gmail.com>"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
webp = { version = "0.2", default-features = false }
ravif = { version = "0.11", default-features = false }
rayon = { version = "1.7", optional = true }
num_cpus = "1.15"

[dependencies.rav1e]
version = "0.6"
default-features = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3